# youtube-mcp-server

./: .cursorrules  .env.example  .gitignore  README.md  main.py  pyproject.toml  test_cases.json  test_server.py
youtube_mcp_server/: __init__.py  __main__.py  handlers.py  server.py  tools.json
